# TC4017

./: .gitignore
4.2/: README.md
4.2/P1/: README.md
4.2/P1/results/: StatisticsResults.txt
4.2/P1/source/: computeStatistics.py  fileWithData.txt  pruebas_pylint.sh
4.2/P1/tests/: pylint_historial.txt
4.2/P2/: README.md
4.2/P3/: README.md
5.2/source/: computeSales.py
5.2/tests/: flake8_historial.txt  pylint_historial.txt
A01796826_A5.2/: README.md
A01796826_A5.2/data/: priceCatalogue.json
A01796826_A5.2/results/: TC2.Sales_results.txt  TC3.Sales_results.txt  priceCatalogue_results.txt  salesRecord_results.txt
A01796826_A5.2/source/: computeSales.py  ejecuta_programa.sh  generar_ventas.py
A01796826_A5.2/tests/: flake8_historial.txt  pylint_historial.txt
a01796826_a6.2/: pyproject.toml
a01796826_a6_2/: .coverage  ARQUITECTURA.md  CAMBIOS.md  CHANGELOG.md  DESKTOP_APP_README.md  GUIA_RAPIDA.md  IMPLEMENTACION.md  README.md  pyproject.toml
a01796826_a6_2/data/: bd.json
a01796826_a6_2/src/: __init__.py  __main__.py  almacen_json.py  app_desktop.py  customer.py  customer_service.py  ejecuta_calidad.sh  ejecutar_app.sh  ejecutar_pruebas.sh  hotel.py  hotel_service.py  main.py  reservation.py  reservation_service.py
a01796826_a6_2/test_reports/: test_report_20260218_194055.txt  test_report_calidad.txt  test_report_log.txt
a01796826_a6_2/tests/: conftest.py  test_customer.py  test_customer_service.py  test_hotel.py  test_hotel.txt  test_hotel_service.py  test_integracion.py  test_reservation.py  test_reservation_service.py
(+9 files in other folders)
